<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Title"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/title_register"
            android:textSize="@dimen/font_title_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Subtitle"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/subtitle_register"
            android:textColor="@color/text_secondary" />

        <EditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/hint_edit_name"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="newPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:autofillHints="newPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_register" />

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
