<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvProfileTitle"
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/title_profile"
            android:textSize="@dimen/font_title_large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:textSize="@dimen/font_body_large"
                android:textColor="@color/text"
                android:text="@string/profile_username_default" />

            <TextView
                android:id="@+id/tvGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:textSize="@dimen/font_body_large"
                android:textColor="@color/text"
                android:text="@string/profile_goal_default" />

            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:textSize="@dimen/font_body_large"
                android:textColor="@color/text"
                android:text="@string/profile_level_default" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_edit_profile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/etEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:hint="@string/hint_edit_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEditGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:hint="@string/hint_edit_goal"
                android:inputType="text" />

            <EditText
                android:id="@+id/etEditLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:hint="@string/hint_edit_level"
                android:inputType="text" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_save_profile" />

            <Button
                android:id="@+id/btnCancelProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/btn_cancel_profile" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
