<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Title"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/app_name"
            android:textSize="@dimen/font_title_large"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Subtitle"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:text="@string/subtitle_login"
            android:textColor="@color/text_secondary" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleLogin"
            style="@style/Widget.FitRoutine.GoogleButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/google_button_height"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/btn_google_login" />

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_tiny"
            android:text="@string/link_go_to_register"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/font_body_medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
