<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/title_today_routine"
            android:textAlignment="center"
            android:textSize="@dimen/font_title_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            style="@style/TextStyle.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/subtitle_daily_exercises"
            android:textSize="@dimen/font_subtitle" />

        <EditText
            android:id="@+id/etExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/hint_exercise"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_exercise" />

        <Button
            android:id="@+id/btnSuggestedRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/btn_suggested_routine" />

        <LinearLayout
            android:id="@+id/suggestedOptionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@color/menu_highlight"
            android:padding="@dimen/spacing_tiny"
            android:layout_marginTop="@dimen/spacing_tiny">

            <Button
                android:id="@+id/btnTrenSuperior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_tren_superior" />

            <Button
                android:id="@+id/btnTrenInferior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_tren_inferior" />

            <Button
                android:id="@+id/btnCore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_core" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/inputLayout"
        app:layout_constraintBottom_toTopOf="@id/navBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/exerciseContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/nav_bar_padding"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnNavProgreso"
            style="@style/Widget.FitRoutine.NavButton"
            android:text="@string/nav_progreso" />

        <Button
            android:id="@+id/btnNavPerfil"
            style="@style/Widget.FitRoutine.NavButton"
            android:text="@string/nav_perfil" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
